--- a/BlazorWebsite/BlazorWebsite.Client/Pages/Index.cshtml
+++ b/BlazorWebsite/BlazorWebsite.Client/Pages/Index.cshtml
@@ -1,7 +1,33 @@
 ﻿@page "/"
+@inject HttpClient Http
+@using BlazorWebsite.Shared
 
-<h1>Hello, world!</h1>
+<div class="jumbotron jumbotron-fluid">
+    <h1 style="margin: 0 auto" class="mx-auto text-center">
+        Blog
+    </h1>
+</div>
 
-Welcome to your new app.
+<div class="col-md-6 offset-md-3 col-xs-12">
+    @if (blogPosts == null)
+    {
+        <p><em>Loading blog posts...</em></p>
+    }
+    else
+    {
+        foreach(var post in blogPosts)
+        {
+            <BlogPostShort Title="@post.Title" Content="@post.Content" Date="@post.Date"/>
+        }
+    }
+</div>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+
+@functions {
+    BlogPostSummary[] blogPosts;
+
+    protected override async Task OnInitAsync()
+    {
+        blogPosts = await Http.GetJsonAsync<BlogPostSummary[]>("/api/BlogPost/Summaries");
+    }
+}
