--- a/BlazorWebsite/BlazorWebsite.Client/Shared/NavMenu.cshtml
+++ b/BlazorWebsite/BlazorWebsite.Client/Shared/NavMenu.cshtml
@@ -1,33 +1,22 @@
-﻿<div class="main-nav">
-    <div class="navbar navbar-inverse">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">BlazorWebsite</a>
-        </div>
-        <div class="clearfix"></div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li>
-                    <NavLink href="/" Match=NavLinkMatch.All>
-                        <span class="glyphicon glyphicon-home"></span> Home
-                    </NavLink>
-                </li>
-                <li>
-                    <NavLink href="/counter">
-                        <span class="glyphicon glyphicon-education"></span> Counter
-                    </NavLink>
-                </li>
-                <li>
-                    <NavLink href="/fetchdata">
-                        <span class="glyphicon glyphicon-th-list"></span> Fetch data
-                    </NavLink>
-                </li>
-            </ul>
-        </div>
-    </div>
+﻿<div class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
+    <ul class="navbar-nav mr-auto">
+        <li>
+            <NavLink class="nav-link" href="/" Match=NavLinkMatch.All>
+                Blog
+            </NavLink>
+        </li>
+        <li>
+            <NavLink class="nav-link" href="/projects">
+                Projects
+            </NavLink>
+        </li>
+        <li>
+            <NavLink class="nav-link" href="/aboutme">
+                About me
+            </NavLink>
+        </li>
+    </ul>
+    <span class="navbar-text">
+        Krzysztof Wrona
+    </span>
 </div>
