--- a/BlazorWebsite/BlazorWebsite.Client/Pages/Index.cshtml
+++ b/BlazorWebsite/BlazorWebsite.Client/Pages/Index.cshtml
@@ -17,7 +17,7 @@
     {
         foreach(var post in blogPosts)
         {
-            <BlogPostShort Title="@post.Title" Content="@post.Content" Date="@post.Date"/>
+            <BlogPostShort Title="@post.Title" Content="@post.Content" Date="@post.Date" Id="@post.Id"/>
         }
     }
 </div>
