--- a/BlazorWebsite/BlazorWebsite.Client/Pages/BlogPostShort.cshtml
+++ b/BlazorWebsite/BlazorWebsite.Client/Pages/BlogPostShort.cshtml
@@ -1,10 +1,14 @@
 ﻿<h2>@Title</h2>
 <p><em>Published on @Date</em></p>
 <HtmlView Content="@Content" />
+<a class="nav-link" href="/blogpost/@Id">
+    ...
+</a>
 <hr />
 <br />
 
 @functions{
+    public int Id { get; set; }
     public string Title { get; set; }
     public string Content { get; set; }
     public DateTime Date { get; set; }
