Update to blazor 0.3

--- a/BlazorWebsite/BlazorWebsite.Client/Pages/BlogPost.cshtml
+++ b/BlazorWebsite/BlazorWebsite.Client/Pages/BlogPost.cshtml
@@ -23,7 +23,7 @@
 @functions {
     public string Id {get;set;}
 
-    public BlogPostFull BlogPostModel { get; set; }
+    private BlogPostFull BlogPostModel { get; set; }
 
     protected override async Task OnInitAsync()
     {
