--- a/BlazorWebsite/BlazorWebsite.Client/Shared/NavMenu.cshtml
+++ b/BlazorWebsite/BlazorWebsite.Client/Shared/NavMenu.cshtml
@@ -1,22 +1,26 @@
-﻿<div class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
-    <ul class="navbar-nav mr-auto">
-        <li>
-            <NavLink class="nav-link" href="/" Match=NavLinkMatch.All>
-                Blog
-            </NavLink>
-        </li>
-        <li>
-            <NavLink class="nav-link" href="/projects">
-                Projects
-            </NavLink>
-        </li>
-        <li>
-            <NavLink class="nav-link" href="/aboutme">
-                About me
-            </NavLink>
-        </li>
-    </ul>
-    <span class="navbar-text">
-        Krzysztof Wrona
-    </span>
-</div>
+﻿<nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
+    <a class="navbar-brand" href="#">Krzysztof Wrona</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <NavLink class="nav-link" href="/" Match=NavLinkMatch.All>
+                    Blog
+                </NavLink>
+            </li>
+            <li class="nav-item">
+                <NavLink class="nav-link" href="/projects">
+                    Projects
+                </NavLink>
+            </li>
+            <li class="nav-item">
+                <NavLink class="nav-link" href="/aboutme">
+                    About me
+                </NavLink>
+            </li>
+        </ul>
+    </div>
+</nav> 
