Add projects and info about me page

--- a/BlazorWebsite/BlazorWebsite.Client/Pages/Projects.cshtml
+++ b/BlazorWebsite/BlazorWebsite.Client/Pages/Projects.cshtml
@@ -5,6 +5,35 @@
     </h1>
 </div>
 <div class="col-md-6 offset-md-3 col-xs-12">
+    <p>At the moment I am only showing my personal projects here, not the stuff I do at work.</p><br/>
     <h1>This website</h1>
-    <p>It has been written using experimental framework blazor. Source can be found at <a href="https://github.com/krzychuwr1/blazorWebsite" >my github</a></p>
+    <p>It has been written using experimental framework blazor. It is still somewhat a work in progress (just like blazor). I created it because I've thought about creating a blog for a long time, and I really wanted to try blazor out on some real project.</p>
+    <p>Source can be found at <a href="https://github.com/krzychuwr1/blazorWebsite">my github</a></p>
+    <br /><hr /><br />
+    <h1>Metin Go</h1>
+    <p>Basically Pokemon Go but with more focus on combat and equipment system. I am creating this game as a university project, however I do plan on still developing it after the semester is over.</p>
+    <p>The game is being written in Xamarin.Forms. Yes, I am aware that it is not exactly the best tool for creating games, but as the focus of the game is on combat and equipment it is not that bad.</p>
+    <p>The game has not yet been published, however it should be available in play store somewhere around June 2018, and in future maybe also in App Store. The game also works on UWP but I doubt anybody will play it on PC or W10 mobile phone</p>
+    <p>By the way, the name Metin Go is a temporary name, and assets are also just a placeholder.</p>
+    <img class="col-md-5 offset-md-1 col-sm-12 img-fluid" src="images/metingo1.png" />
+    <img class="col-md-5 col-sm-12 img-fluid" src="images/metingo2.png" />
+    <br /><br />
+    <p>Source can be found at <a href="https://github.com/krzychuwr1/metin-go">my github</a></p>
+    <br /><hr /><br />
+    <h1>Expert-Goggles</h1>
+    <p>A simple library for computer forensics. It allows to find traces of activity from Google Drive, Google Chrome, Firefox and Skype.</p>
+    <p>This project has been created by me and Michał Dzióbek for our engineer diploma project.</p>
+    <p>The library can be downloaded from <a href="https://www.nuget.org/packages/Expert.Goggles/">nuget</a></p>
+    <p>Sources can be found at <a href="https://github.com/krzychuwr1/expert-goggles">my github</a></p>
+    <br /><hr /><br />
+    <h1>UWP Speech recognition app on Windows 10 IoT on raspberry pi controlling the lights and sending data to cloud</h1>
+    <p>
+        This was actually a rather small project, but I decided to mention it cause it was a lot of fun. We created it for our IoT classes on university. Also it has a lot of buzzwords.
+    </p>
+    <p>
+        Basically, I installed windows 10 IoT on Raspberry Pi, connected external sound card, then connected external microphone to the sound card.
+    </p>
+    <p>
+        Then I was able to use windows speech recognition API in UWP project, and control the lights based on sound command. I've also setup sending the information about registered words to IoT Event Hub on Azure.
+    </p>
 </div>
