--- a/BlazorWebsite/BlazorWebsite.Client/Pages/AboutMe.cshtml
+++ b/BlazorWebsite/BlazorWebsite.Client/Pages/AboutMe.cshtml
@@ -6,6 +6,17 @@
         </h1>
     </div>
     <div class="col-md-6 offset-md-3 col-xs-12">
-        <h1>Hello!</h1>
-        <p>Here I am going to write about who I am and what I do.</p>
+        <h1>What I do</h1>
+        <p>Currently I work as .NET developer at Circdata in Krakow, I mostly work on mobile apps and fullstack development. I have been working there since 2017, before I worked as .NET dev for a year at SKM-group.</p>
+        <p>
+            The technology I specialize in (well, if you can say that about dev with 2 years of professional experience) is Xamarin.Forms. Recently I've also taken huge interest in Blazor framework.
+            I've done a fair share of backend development, using asp.net MVC and .net core.
+        </p>
+        <h1>Who I am</h1>
+        <p>
+            I was born in Kielce. Currently I live in Krakow, where I am studying Computer Science at AGH University of Science and Technology, and working at Circdata.
+        </p>
+        <p>
+            Apart from programming, my main interests are science, computer games, books, biking, astronomy, politics, anime, manga, and wasting time watching memes and youtube videos.
+        </p>
     </div>  
