--- a/BlazorWebsite/BlazorWebsite.Client/Pages/AboutMe.cshtml
+++ b/BlazorWebsite/BlazorWebsite.Client/Pages/AboutMe.cshtml
@@ -5,7 +5,7 @@
             About me
         </h1>
     </div>
-    <div class="col-md-6 offset-md-3 col-xs-12">
+    <div class="col-xl-6 offset-xl-3 col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-sm-12">
         <h1>What I do</h1>
         <p>Currently I work as .NET developer at Circdata in Krakow, I mostly work on mobile apps and fullstack development. I have been working there since 2017, before I worked as .NET dev for a year at SKM-group.</p>
         <p>
