--- a/BlazorWebsite/BlazorWebsite.Client/Pages/BlogPost.cshtml
+++ b/BlazorWebsite/BlazorWebsite.Client/Pages/BlogPost.cshtml
@@ -6,7 +6,7 @@
             @BlogPostModel?.Title
         </h1>
     </div>
-    <div class="col-md-6 offset-md-3 col-xs-12">
+    <div class="col-xl-6 offset-xl-3 col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-sm-12">
         @if(BlogPostModel != null)
         {
             <p><em>Published on @BlogPostModel.Date</em></p>
