--- a/BlazorWebsite/BlazorWebsite.Client/Pages/Projects.cshtml
+++ b/BlazorWebsite/BlazorWebsite.Client/Pages/Projects.cshtml
@@ -4,7 +4,7 @@
         My Projects
     </h1>
 </div>
-<div class="col-md-6 offset-md-3 col-xs-12">
+<div class="col-xl-6 offset-xl-3 col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-sm-12">
     <p>At the moment I am only showing my personal projects here, not the stuff I do at work.</p><br/>
     <h1>This website</h1>
     <p>It has been written using experimental framework blazor. It is still somewhat a work in progress (just like blazor). I created it because I've thought about creating a blog for a long time, and I really wanted to try blazor out on some real project.</p>
@@ -26,7 +26,7 @@
     <p>The library can be downloaded from <a href="https://www.nuget.org/packages/Expert.Goggles/">nuget</a></p>
     <p>Sources can be found at <a href="https://github.com/krzychuwr1/expert-goggles">my github</a></p>
     <br /><hr /><br />
-    <h1>UWP Speech recognition app on Windows 10 IoT on raspberry pi controlling the lights and sending data to cloud</h1>
+    <h1>Speech recognition on Raspberry Pi Win10 IoT</h1>
     <p>
         This was actually a rather small project, but I decided to mention it cause it was a lot of fun. We created it for our IoT classes on university. Also it has a lot of buzzwords.
     </p>
